# AIRTBench-Code

./: .gitignore  AIRTBENCH_COMPLETE_SPECIFICATION.md  AIRTBENCH_COMPREHENSIVE_IMPROVEMENT_PLAN.md  AI_RED_TEAM_EXAMPLE_INTEGRATION_PLAN.md  KERNEL_COMPREHENSIVE_SPECIFICATION.md  REFACTORING_XML_TO_TOOL_CALLS.md  SMOLAGENTS_MIGRATION_PLAN.md  Taskfile.yaml  analyze_traces.py  comprehensive_analysis_report.md  container_py_specification.md  detailed_analysis.py  extract_examples.py  pyproject.toml  quick_trace_analysis.py
airtbench/: main.py
airtbench-smolagents/: pyproject.toml
airtbench-smolagents/src/airtbench_smolagents/: __init__.py  agent.py  api.py  cli.py  config.py  executor.py  util.py
airtbench-smolagents/src/airtbench_smolagents/tests/: __init__.py  test_behavioral_compatibility.py
airtbench-smolagents/src/airtbench_smolagents/tools/: __init__.py  challenge_loader.py  flag_validator.py
