[project]
name = "airtbench-smolagents"
version = "0.1.0"
description = "AIRTBench implementation using SmolagAgents framework for autonomous AI red teaming"
readme = "README.md"
authors = [
    { name = "Zander Mackie", email = "zmackie@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    # Core SmolagAgents dependencies
    "smolagents[toolkit]>=1.19.0",
    "smolagents[docker]>=1.19.0",
    "smolagents[litellm]>=1.19.0",
    
    # AIRTBench core dependencies
    "aiodocker>=0.24.0",
    "aiohttp>=3.8.0",
    "backoff>=2.2.1",
    "click>=8.0.0",
    "docker>=7.1.0",
    "dreadnode==1.10.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "tenacity>=9.1.2",
    
    # Text processing
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.11.0",
    "mypy>=1.15.0",
    "ruff>=0.11.5",
    "types-pyyaml>=6.0.12.20250516",
]

[project.scripts]
airtbench-smolagents = "airtbench_smolagents.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
]
